# Pelr

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  Resource.qrc  SECURITY.md  SUPPORT.md
.gitee/ISSUE_TEMPLATE/: bug.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request_en.yml  feature_request_zh.yml
docs/: ChangeLog.md  Pelr.html  README_zh.md  SECURITY.md  SUPPORT.md  app-LibreTranslate.md  app-live2d.md  app-tray.md  app-tts.md  app-txTr.md  app-voicevox.md  app-window.md  dev-dev.md  dev-init.md  dev-structure.md  index.md  qa-OpenSSL.md
public/font/: README.md
public/style/: menu.qss
scripts/: clean_release.py  generate_notice.py
src/: icon.rc  main.cpp
src/ai/: llamaclient.cpp  llamaclient.h
src/compatLApp/: LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppView.cpp
src/core/: GLCore.cpp  GLCore.h  data.cpp  data.hpp  launcher.hpp  tray.cpp  tray.h  tray_gif.cpp  tray_text.cpp
src/keyboard/: keyboardoverlay.cpp
src/model/: ExtraFileManager.cpp  ExtraMotionManager.cpp  ExtraMotionManager.h
src/translation/: TranslationManager.cpp
src/tts/: pyLang.cpp  tencenttranslator.cpp  trmanager.cpp  trmanager.h  voicegenerator.hpp  voicevox_tts.cpp
src/ui/: BubbleBox.cpp  BubbleBox.h  DiskUsageRing.cpp  DiskUsageRing.hpp  MediaPlayerWidget.cpp  MediaPlayerWidget.h  MenuWidget.cpp  NotificationWidget.cpp  chat.cpp  chat.ui  chatBoxOnModel.cpp  custommenu.cpp  datetimepickerdialog.cpp  datetimepickerdialog.h  editor.cpp  editor.ui  launcherMenu.hpp  mainWidget.cpp  mainWidget.h  mainWidget.ui  manageStart.cpp  manageStart.h  manageStart.ui  setting.cpp  setting.h  setting.ui  settingslots.cpp  systemMonitorWidget.cpp  systemMonitorWidget.hpp  todoWidget.cpp  todoWidget.h  todoWidget.ui
src/utils/: AgreementDialog.cpp  AgreementDialog.h  AudioDecoder.cpp  AudioDecoder.hpp  CheckApplication.cpp  CheckApplication.h  PrivacyPolicyDialog.cpp  PrivacyPolicyDialog.h  TtsLipSync.hpp  UpdateDialog.cpp  UpdateDialog.h  VersionChecker.cpp  getpowerstatus.cpp  initFileSys.cpp  loadText.h  logger.cpp  logger.hpp  storageInfo.cpp  storageInfo.hpp  systemInfo.cpp  systemInfo.hpp  todoNotify.hpp
translations/: language_en_US.ts  language_zh_CN.ts
